--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ after_success: |
   tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
   sudo make install && cd ../.. &&
   kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/housecat-*
+
+notifications:
+  email: false
