--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ path = "src/main.rs"
 
 [dependencies]
 regex = "0.1.30"
-regex_macros = "0.1.18"
-num = "0.1.24"
+regex_macros = "=0.1.21"
+num = "=0.1.25"
